--- a/UnNamedWeibo/Base.lproj/Main.storyboard
+++ b/UnNamedWeibo/Base.lproj/Main.storyboard
@@ -59,19 +59,19 @@
         <scene sceneID="uqd-MP-q6I">
             <objects>
                 <tableViewController id="xCt-L4-EeA" customClass="HomeTableViewController" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="289" sectionHeaderHeight="22" sectionFooterHeight="22" id="SIf-K9-THH">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="464" sectionHeaderHeight="22" sectionFooterHeight="22" id="SIf-K9-THH">
                         <rect key="frame" x="0.0" y="64" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <color key="sectionIndexBackgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="WeiboCell" rowHeight="289" id="xlN-Eg-L5h" customClass="KYCell">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="WeiboCell" rowHeight="464" id="xlN-Eg-L5h" customClass="KYCell">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="xlN-Eg-L5h" id="22v-tu-i6u">
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ahg-PD-yVw" userLabel="CellView" customClass="CellView">
-                                            <rect key="frame" x="5" y="35" width="590" height="244"/>
+                                            <rect key="frame" x="5" y="35" width="590" height="419"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U7l-2m-WOR">
                                                     <rect key="frame" x="52" y="0.0" width="65" height="20"/>
@@ -94,20 +94,63 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hCK-Zx-Qf9" userLabel="WeiboView" customClass="WeiboView">
-                                                    <rect key="frame" x="0.0" y="25" width="590" height="214"/>
+                                                    <rect key="frame" x="0.0" y="25" width="590" height="389"/>
                                                     <subviews>
                                                         <label autoresizesSubviews="NO" opaque="NO" clearsContextBeforeDrawing="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o4i-jI-Rqb" userLabel="weibo_text">
-                                                            <rect key="frame" x="10" y="5" width="575" height="204"/>
+                                                            <rect key="frame" x="10" y="5" width="575" height="196"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
+                                                        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="yIf-4U-N4w">
+                                                            <rect key="frame" x="0.0" y="209" width="590" height="175"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="150" id="8a6-2Y-C4M"/>
+                                                                <constraint firstAttribute="height" constant="175" id="ShI-DX-5rh"/>
+                                                            </constraints>
+                                                            <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="1Nm-AE-4lj">
+                                                                <size key="itemSize" width="179" height="174"/>
+                                                                <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                                                <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                                                <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                                            </collectionViewFlowLayout>
+                                                            <cells>
+                                                                <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="weibo_image_cell" id="3gY-DX-EKX">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                                    <autoresizingMask key="autoresizingMask"/>
+                                                                    <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                                                        <rect key="frame" x="0.0" y="0.0" width="179" height="174"/>
+                                                                        <autoresizingMask key="autoresizingMask"/>
+                                                                        <subviews>
+                                                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="kitten" translatesAutoresizingMaskIntoConstraints="NO" id="2T3-Xg-cVa">
+                                                                                <rect key="frame" x="0.0" y="0.0" width="179" height="174"/>
+                                                                            </imageView>
+                                                                        </subviews>
+                                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                                    </view>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="trailing" secondItem="2T3-Xg-cVa" secondAttribute="trailing" id="akw-X0-s8X"/>
+                                                                        <constraint firstAttribute="bottom" secondItem="2T3-Xg-cVa" secondAttribute="bottom" id="d8x-gE-5HR"/>
+                                                                        <constraint firstItem="2T3-Xg-cVa" firstAttribute="top" secondItem="3gY-DX-EKX" secondAttribute="top" id="i2y-sm-dj1"/>
+                                                                        <constraint firstItem="2T3-Xg-cVa" firstAttribute="leading" secondItem="3gY-DX-EKX" secondAttribute="leading" id="nDH-qb-CnR"/>
+                                                                    </constraints>
+                                                                </collectionViewCell>
+                                                            </cells>
+                                                            <variation key="default">
+                                                                <mask key="constraints">
+                                                                    <exclude reference="8a6-2Y-C4M"/>
+                                                                </mask>
+                                                            </variation>
+                                                        </collectionView>
                                                     </subviews>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <constraints>
+                                                        <constraint firstItem="yIf-4U-N4w" firstAttribute="top" secondItem="o4i-jI-Rqb" secondAttribute="bottom" constant="8" id="Iw3-eL-2zT"/>
+                                                        <constraint firstAttribute="bottom" secondItem="yIf-4U-N4w" secondAttribute="bottom" constant="5" id="MhK-wz-6Lx"/>
                                                         <constraint firstItem="o4i-jI-Rqb" firstAttribute="leading" secondItem="hCK-Zx-Qf9" secondAttribute="leading" constant="10" id="Ukv-RZ-iwh"/>
                                                         <constraint firstItem="o4i-jI-Rqb" firstAttribute="top" secondItem="hCK-Zx-Qf9" secondAttribute="top" constant="5" id="V1Q-7O-PnR"/>
-                                                        <constraint firstAttribute="bottom" secondItem="o4i-jI-Rqb" secondAttribute="bottom" constant="5" id="aow-bp-uhl"/>
+                                                        <constraint firstAttribute="trailing" secondItem="yIf-4U-N4w" secondAttribute="trailing" id="qDD-fh-Le0"/>
+                                                        <constraint firstItem="yIf-4U-N4w" firstAttribute="leading" secondItem="hCK-Zx-Qf9" secondAttribute="leading" id="zXf-fn-wtK"/>
                                                         <constraint firstAttribute="trailing" secondItem="o4i-jI-Rqb" secondAttribute="trailing" constant="5" id="zhR-lj-2xq"/>
                                                     </constraints>
                                                     <connections>
