--- a/UnNamedWeibo/Base.lproj/Main.storyboard
+++ b/UnNamedWeibo/Base.lproj/Main.storyboard
@@ -139,17 +139,17 @@
                                                             </connections>
                                                         </collectionView>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wW4-Ej-uy3" userLabel="reWeiboView" customClass="ReWeiboView">
-                                                            <rect key="frame" x="49" y="56" width="536" height="190"/>
+                                                            <rect key="frame" x="0.0" y="56" width="590" height="190"/>
                                                             <subviews>
                                                                 <label autoresizesSubviews="NO" opaque="NO" clearsContextBeforeDrawing="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y0P-cf-XCP" userLabel="reWeibo_text">
-                                                                    <rect key="frame" x="10" y="5" width="521" height="45"/>
+                                                                    <rect key="frame" x="10" y="5" width="575" height="45"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
-                                                                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="wWD-Yg-zal" userLabel="ReWeiboImgCollectionView">
-                                                                    <rect key="frame" x="0.0" y="55" width="536" height="130"/>
-                                                                    <color key="backgroundColor" red="0.80000001192092896" green="0.80000001192092896" blue="0.80000001192092896" alpha="1" colorSpace="calibratedRGB"/>
+                                                                <collectionView multipleTouchEnabled="YES" contentMode="scaleAspectFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="wWD-Yg-zal" userLabel="ReWeiboImgCollectionView">
+                                                                    <rect key="frame" x="0.0" y="55" width="590" height="130"/>
+                                                                    <color key="backgroundColor" red="0.90196079015731812" green="0.90196079015731812" blue="0.90196079015731812" alpha="1" colorSpace="calibratedRGB"/>
                                                                     <constraints>
                                                                         <constraint firstAttribute="height" constant="130" id="Bk8-VK-f05"/>
                                                                     </constraints>
@@ -160,7 +160,7 @@
                                                                         <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                                     </collectionViewFlowLayout>
                                                                     <cells>
-                                                                        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" reuseIdentifier="reWeibo_image_cell" id="HNf-IG-2bZ" customClass="ReWeiboImgCollectionViewCell">
+                                                                        <collectionViewCell opaque="NO" multipleTouchEnabled="YES" contentMode="scaleAspectFill" reuseIdentifier="reWeibo_image_cell" id="HNf-IG-2bZ" customClass="ReWeiboImgCollectionViewCell">
                                                                             <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                                                             <autoresizingMask key="autoresizingMask"/>
                                                                             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -190,7 +190,7 @@
                                                                     </connections>
                                                                 </collectionView>
                                                             </subviews>
-                                                            <color key="backgroundColor" red="0.80000001192092896" green="0.80000001192092896" blue="0.80000001192092896" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <color key="backgroundColor" red="0.90196079015731812" green="0.90196079015731812" blue="0.90196079015731812" alpha="1" colorSpace="calibratedRGB"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="bottom" secondItem="wWD-Yg-zal" secondAttribute="bottom" constant="5" id="25b-dI-Yl5"/>
                                                                 <constraint firstAttribute="height" constant="190" id="FPO-jh-u9z"/>
@@ -219,11 +219,11 @@
                                                     <constraints>
                                                         <constraint firstAttribute="bottom" secondItem="yIf-4U-N4w" secondAttribute="bottom" constant="5" id="MhK-wz-6Lx"/>
                                                         <constraint firstItem="yIf-4U-N4w" firstAttribute="top" secondItem="wW4-Ej-uy3" secondAttribute="bottom" constant="8" id="OdD-hg-1ao"/>
-                                                        <constraint firstAttribute="trailing" secondItem="wW4-Ej-uy3" secondAttribute="trailing" constant="5" id="PuW-vc-JmD"/>
+                                                        <constraint firstAttribute="trailing" secondItem="wW4-Ej-uy3" secondAttribute="trailing" id="PuW-vc-JmD"/>
                                                         <constraint firstItem="o4i-jI-Rqb" firstAttribute="leading" secondItem="hCK-Zx-Qf9" secondAttribute="leading" constant="10" id="Ukv-RZ-iwh"/>
                                                         <constraint firstItem="o4i-jI-Rqb" firstAttribute="top" secondItem="hCK-Zx-Qf9" secondAttribute="top" constant="5" id="V1Q-7O-PnR"/>
                                                         <constraint firstAttribute="trailing" secondItem="yIf-4U-N4w" secondAttribute="trailing" id="qDD-fh-Le0"/>
-                                                        <constraint firstItem="wW4-Ej-uy3" firstAttribute="leading" secondItem="hCK-Zx-Qf9" secondAttribute="leading" constant="49" id="vwd-CH-gTW"/>
+                                                        <constraint firstItem="wW4-Ej-uy3" firstAttribute="leading" secondItem="hCK-Zx-Qf9" secondAttribute="leading" id="vwd-CH-gTW"/>
                                                         <constraint firstItem="wW4-Ej-uy3" firstAttribute="top" secondItem="o4i-jI-Rqb" secondAttribute="bottom" constant="8" id="wus-O0-8Zk"/>
                                                         <constraint firstItem="yIf-4U-N4w" firstAttribute="leading" secondItem="hCK-Zx-Qf9" secondAttribute="leading" id="zXf-fn-wtK"/>
                                                         <constraint firstAttribute="trailing" secondItem="o4i-jI-Rqb" secondAttribute="trailing" constant="5" id="zhR-lj-2xq"/>
